--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Vite App</title>
+    <title>Jerome Manzano | Cross Platform App Developer</title>
   </head>
   <body>
     <div id="app"></div>
