Add side menu for admin

--- a/index.html
+++ b/index.html
@@ -47,8 +47,9 @@
   <body class="font-sans bg-mainBgColor">
     <div
       id="app"
-      class="md:flex"
+      class="sm:flex absolute top-0 w-screen"
     ></div>
+    <div id="sideMenu" class="sm:hidden fixed h-screen top-0 right-0 bg-[#292524] flex z-[999]"></div>
     <script
       type="module"
       src="/src/main.ts"
