Use tailwind colors instead of custom colors

--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
 
     <title>Jerome Manzano | Cross Platform App Developer</title>
   </head>
-  <body class="font-sans bg-mainBgColor">
+  <body class="font-sans bg-neutral-900 text-neutral-300">
     <div
       id="app"
       class="sm:flex absolute top-0 w-screen"
     ></div>
-    <div id="sideMenu" class="sm:hidden fixed h-screen top-0 right-0 bg-[#292524] flex z-[999]"></div>
+    <div id="sideMenu" class="sm:hidden fixed h-screen top-0 right-0 bg-stone-800 flex z-[999]"></div>
     <script
       type="module"
       src="/src/main.ts"
