--- a/index.html
+++ b/index.html
@@ -49,7 +49,10 @@
       id="app"
       class="sm:flex absolute top-0 w-screen"
     ></div>
-    <div id="sideMenu" class="sm:hidden fixed h-screen top-0 right-0 bg-stone-800 flex z-[999]"></div>
+    <div
+      id="sideMenu"
+      class="sm:hidden fixed h-screen top-0 right-0 bg-stone-800 flex z-[999]"
+    ></div>
     <script
       type="module"
       src="/src/main.ts"
